--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2024"
 [dependencies]
 console_error_panic_hook = "0.1.7"
 leptos = { version = "0.8", features = ["csr"] }
-thiserror = "2.0.12"
 async-std = "1.13.1"
 serde = "1.0.219"
 serde_json = "1.0.140"
@@ -29,3 +28,13 @@ features = ['Window', "Storage"]
 
 [dependencies.base64]
 version = "0.22.1"
+
+[dependencies.turf]
+version = "0.10.1"
+[package.metadata.turf]
+minify = true
+load_paths = ["variables"]
+[package.metadata.turf.file_output]
+global_css_file_path = "dist/css/style.css"
+[package.metadata.turf.class_names]
+template = "idle-<original_name>-<id>"
